<resources>
    <string name="ugckit_btn_back">Back</string>
    <string name="ugckit_btn_cancel">Cancel</string>
    <string name="ugckit_btn_ok">OK</string>
    <string name="ugckit_btn_confirm">Confirm</string>
    <string name="ugckit_activity_login_login">Log in</string>
    <string name="ugckit_activity_login_register">Sign up</string>
    <string name="ugckit_activity_login_username">User ID</string>
    <string name="ugckit_activity_login_password">Password</string>
    <string name="ugckit_activity_register_register">Sign up</string>
    <string name="ugckit_activity_register_username">User ID (4-24 characters; supports letters, numbers, and underscores)</string>
    <string name="ugckit_activity_register_password">Password (8-16 characters)</string>
    <string name="ugckit_activity_register_password_verify">Confirm password</string>
    <string name="ugckit_float_window_not_allow">The floating window permission is not granted. Please grant it in Apps - Permissions.</string>
    <string name="ugckit_app_about">About</string>
    <string name="ugckit_btn_login_out">Log out</string>
    <string name="ugckit_video_edit_segment">Set the segment to clip</string>
    <string name="ugckit_music_empty">No content yet</string>
    <string name="ugckit_music_loading">Loading local music...</string>
    <string name="ugckit_follow_shot">Split screens</string>
    <string name="ugckit_next_step">Next</string>
    <string name="ugckit_speed_very_slow">Very slow</string>
    <string name="ugckit_speed_slow">Slow</string>
    <string name="ugckit_speed_normal">Standard</string>
    <string name="ugckit_speed_fast">Fast</string>
    <string name="ugckit_speed_very_fast">Very fast</string>
    <string name="ugckit_aspect">Aspect ratio</string>
    <string name="ugckit_beauty">Basic Beauty</string>
    <string name="ugckit_te_beauty">Advanced Beauty</string>
    <string name="ugckit_music">Music</string>
    <string name="ugckit_motion">Effects</string>
    <string name="ugckit_speed">Speed</string>
    <string name="ugckit_filter">Filters</string>
    <string name="ugckit_paster">Stickers</string>
    <string name="ugckit_subtitle">Text</string>
    <string name="ugckit_transition">Transition</string>
    <string name="ugckit_cancel_record">Cancel</string>
    <string name="ugckit_confirm_cancel_edit_content">Are you sure you want to discard the edits?</string>
    <string name="ugckit_confirm_cancel_record_content">Are you sure you want to discard the video already shot?</string>
    <string name="ugckit_wrong_click">Resume</string>
    <string name="ugckit_give_up">Discard</string>
    <string name="ugckit_video_record_title">Shoot</string>
    <string name="ugckit_video_editer_title">Edit</string>
    <string name="ugckit_picture_editer_title">Photo slide</string>
    <string name="ugckit_picture_choose">Select photo</string>
    <string name="ugckit_video_long_drag">Hold and drag to change the video order</string>
    <string name="ugckit_select_bgm">Background music</string>
    <string name="ugckit_mic_volume">Shooting volume</string>
    <string name="ugckit_bgm_volume">Music volume</string>
    <string name="ugckit_tips">Note</string>
    <string name="ugckit_delete_bgm_or_not">Are you sure you want to remove the music added?</string>
    <string name="ugckit_confirm_delete">Remove</string>
    <string name="ugckit_bgm_start_position">Starting from %1$s</string>
    <string name="ugckit_no_content">No content yet</string>
    <string name="ugckit_none">None</string>
    <string name="ugckit_reverse">Backwards</string>
    <string name="ugckit_slow_motion">Slow</string>
    <string name="ugckit_repeate">Loop</string>
    <string name="ugckit_add">New</string>
    <string name="ugckit_motion_soul_out">Soul out</string>
    <string name="ugckit_motion_split">Split screen</string>
    <string name="ugckit_motion_rock_light">Rock light</string>
    <string name="ugckit_motion_dark_dream">Dark dream</string>
    <string name="ugckit_motion_win_shadow">Blinds</string>
    <string name="ugckit_motion_ghost_shadow">Shadow</string>
    <string name="ugckit_motion_phantom_shadow">Phantom</string>
    <string name="ugckit_motion_ghost">Ghost</string>
    <string name="ugckit_motion_lightning">Lightning</string>
    <string name="ugckit_motion_mirror">Mirror</string>
    <string name="ugckit_motion_illusion">Illusion</string>
    <string name="ugckit_cancel_publish_title">Cancel</string>
    <string name="ugckit_cancel_publish_msg">The video is being uploaded. Are you sure you want to cancel it?</string>
    <string name="ugckit_revert">Undo</string>
    <string name="ugckit_complete">Done</string>
    <string name="ugckit_state_pause">Pause</string>
    <string name="ugckit_save_success">Saved successfully</string>
    <string name="ugckit_download">Download</string>
    <string name="ugckit_downloaded">Downloaded</string>
    <string name="ugckit_use">Apply</string>
    <string name="ugckit_downloading">Downloading</string>
    <string name="ugckit_dynamic_paster">Animated</string>
    <string name="ugckit_static_paster">Static</string>
    <string name="ugckit_bublle_style">Bubble style</string>
    <string name="ugckit_text_color">Text color</string>
    <string name="ugckit_video_joining">Splicing videos...</string>
    <string name="ugckit_cancel_joining">Cancel</string>
    <string name="ugckit_video_cutting">Clipping the video...</string>
    <string name="ugckit_video_join_fail_title">Failed to generate the video</string>
    <string name="ugckit_video_join_not_support_video_format">This format is not supported by the current device</string>
    <string name="ugckit_video_join_not_support_non_mono_format">This video format is not supported currently</string>
    <string name="ugckit_publish_success">Published successfully</string>
    <string name="ugckit_publish_save_aibum">Saved to your phone\'s library</string>
    <string name="ugckit_about_tip1">The UGSV demo app is an app prototype offered by Tencent\'s Video Cloud Team. It demonstrates how different UGSV capabilities work, for example, how to use Tencent Cloud\'s media SDK to implement segment-based shooting and video editing, how to implement video upload and publishing based on Tencent Cloud COS, and how to use Tencent Cloud VOD to distribute videos.</string>
    <string name="ugckit_language_setting_activity_language">Language</string>
    <string name="ugckit_language_setting_activity_follow_system">Same as system (restart required)</string>
    <string name="ugckit_language_setting_activity_save">Save</string>
    <string name="ugckit_user_info_fragment_setting">Settings</string>
    <string name="ugckit_setting_activity_language">Language</string>
    <string name="ugckit_setting_activity_setting">Settings</string>
    <string name="ugckit_fragment_user_info_please_lonin">Please log in first</string>
    <string name="ugckit_fragment_bgm_cancel">Cancel</string>
    <string name="ugckit_dialog_ugc_tip_already_known">OK</string>
    <string name="ugckit_unit_second">s</string>
    <string name="ugckit_fragment_confirm_confirm">Confirm</string>
    <string name="ugckit_fragment_confirm_cancel">Cancel</string>
    <string name="ugckit_fragment_confirm_ok">OK</string>
    <string name="ugckit_fragment_confirm_input_tip">Please enter</string>
    <string name="ugckit_activity_register_register_new_user">Sign up</string>
    <string name="ugckit_video_list_adapter_video_state_normal">Reviewed</string>
    <string name="ugckit_video_list_adapter_video_state_in_audit">Being reviewed</string>
    <string name="ugckit_video_list_adapter_video_state_pornographic">Pornographic</string>
    <string name="ugckit_tc_ugc_video_list_adapter_just_now">Just now</string>
    <string name="ugckit_tc_ugc_video_list_adapter_mins_ago">&#160;minutes ago</string>
    <string name="ugckit_tc_ugc_video_list_adapter_hours_ago">&#160;hours ago</string>
    <string name="ugckit_tc_ugc_video_list_adapter_days_ago">days ago</string>
    <string name="ugckit_video_list_adapter_min_ago">&#160;minute ago</string>
    <string name="ugckit_video_list_adapter_hour_ago">&#160;hour ago</string>
    <string name="ugckit_video_list_adapter_day_ago">&#160;day ago</string>
    <string name="ugckit_fragment_videolist_no_content">No content yet</string>
    <string name="ugckit_tc_picture_join_activity_toast_picture_is_abnormal_and_finish_editing">The editing ended due to an image error.</string>
    <string name="ugckit_tc_picture_join_activity_toast_cancel_video_generation">The video was canceled</string>
    <string name="ugckit_picture_join_left_right">Wipe</string>
    <string name="ugckit_picture_join_up_down">Push</string>
    <string name="ugckit_picture_join_zoom_in">Zoom in</string>
    <string name="ugckit_picture_join_zoom_out">Zoom out</string>
    <string name="ugckit_picture_join_rotate">Rotate</string>
    <string name="ugckit_picture_join_fade_in_and_fade_out">Fade</string>
    <string name="ugckit_fragment_input_word_input_tip">Please enter</string>
    <string name="ugckit_fragment_input_word_cancel">Cancel</string>
    <string name="ugckit_fragment_input_word_ok">OK</string>
    <string name="ugckit_layout_joiner_progress_video_is_generating">Generating video...</string>
    <string name="ugckit_audio_ctrl_accompaniment">Music</string>
    <string name="ugckit_audio_ctrl_finish">Finish</string>
    <string name="ugckit_audio_ctrl_voice">Voice</string>
    <string name="ugckit_audio_ctrl_vol">Volume</string>
    <string name="ugckit_login_activity_login_successfully">Login successful</string>
    <string name="ugckit_login_activity_auto_login_failed">Auto login failed</string>
    <string name="ugckit_login_activity_no_network_connection">No internet connection</string>
    <string name="ugckit_login_activity_password_length_tip">The password must contain 8-16 characters</string>
    <string name="ugckit_login_activity_username_does_not_meet_specifications">Invalid user ID</string>
    <string name="ugckit_register_activity_attempt_normal_regist_username_does_not_meet_specifications">Invalid user ID</string>
    <string name="ugckit_register_activity_attempt_normal_regist_password_length_error">The password must contain 8-16 characters</string>
    <string name="ugckit_register_activity_attempt_normal_regist_password_verify_error">The passwords do not match</string>
    <string name="ugckit_layout_sound_effect_ktv">Karaoke</string>
    <string name="ugckit_layout_sound_effect_original_sound">Original</string>
    <string name="ugckit_layout_sound_effect_room">Room</string>
    <string name="ugckit_layout_sound_effect_hall">Hall</string>
    <string name="ugckit_layout_sound_effect_deep">Deep</string>
    <string name="ugckit_layout_sound_effect_loud">Resonant</string>
    <string name="ugckit_layout_sound_effect_magnetic">Husky</string>
    <string name="ugckit_layout_sound_effect_original_sound2">Original</string>
    <string name="ugckit_layout_sound_effect_wild_kid">Child</string>
    <string name="ugckit_layout_sound_effect_lolita">Girl</string>
    <string name="ugckit_layout_sound_effect_uncle">Man</string>
    <string name="ugckit_layout_sound_effect_heavy_metal">Heavy metal</string>
    <string name="ugckit_layout_sound_effect_foreigner">Punk</string>
    <string name="ugckit_layout_sound_effect_beast">Beast</string>
    <string name="ugckit_layout_sound_effect_fat_boy">Otaku</string>
    <string name="ugckit_layout_sound_effect_heavy_current">Electronic</string>
    <string name="ugckit_layout_sound_effect_heavy_machine">Robot</string>
    <string name="ugckit_layout_sound_effect_vacant">Ethereal</string>
    <string name="speed_0_3x">0.3x</string>
    <string name="speed_0_5x">0.5x</string>
    <string name="speed_1x">1x</string>
    <string name="speed_2x">2x</string>
    <string name="speed_3x">3x</string>
</resources>