<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="#fff"
    android:clickable="false"
    android:focusable="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:tabIndicator="@drawable/ugckit_indicator"
            app:tabIndicatorColor="#181C21"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorHeight="4dp"
            app:tabSelectedTextColor="#181C21"
            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
            app:tabTextColor="#B0B9C4">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Volume" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_replika"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Replika Suara" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_gema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gema" />

        </com.google.android.material.tabs.TabLayout>

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ucgkit_ic_close"
            app:tint="#505D6D" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:paddingVertical="24dp">

        <TextView
            android:id="@+id/tv_mic_volume"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:gravity="left|center_vertical"
            android:text="Suara Asli"
            android:textColor="@color/black" />

        <SeekBar
            android:id="@+id/seekbar_mic_volume"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:indeterminate="false"
            android:max="100"
            android:maxHeight="4dp"
            android:minHeight="4dp"
            android:progress="50"
            android:progressDrawable="@drawable/ugckit_seekbar_progress_drawable"
            android:thumb="@android:color/transparent" />
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/layout_reverb_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="20dp"
        android:scrollbars="none"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_reverb_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableTop="@drawable/audio_effect_disabled"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/ugckit_layout_sound_effect_original_sound"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/btn_reverb_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableTop="@drawable/audio_effect_reverb_ktv"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/ugckit_layout_sound_effect_ktv"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/btn_reverb_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableTop="@drawable/audio_effect_reverb_room"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/ugckit_layout_sound_effect_room"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/btn_reverb_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableTop="@drawable/audio_effect_reverb_hall"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/ugckit_layout_sound_effect_hall"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/btn_reverb_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableTop="@drawable/audio_effect_reverb_low"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/ugckit_layout_sound_effect_deep"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/btn_reverb_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableTop="@drawable/audio_effect_reverb_sonorous"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/ugckit_layout_sound_effect_loud"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/btn_reverb_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableTop="@drawable/audio_effect_reverb_magnetic"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/ugckit_layout_sound_effect_magnetic"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12dp" />

        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/layout_voicechanger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:scrollbars="none"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_voicechanger_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableTop="@drawable/audio_effect_disabled"
                android:focusable="false"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/ugckit_layout_sound_effect_original_sound2"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/btn_voicechanger_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableTop="@drawable/audio_effect_voice_change_badboy"
                android:focusable="false"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/ugckit_layout_sound_effect_wild_kid"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12dp" />


            <TextView
                android:id="@+id/btn_voicechanger_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableTop="@drawable/audio_effect_voice_change_loli"
                android:focusable="false"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/ugckit_layout_sound_effect_lolita"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/btn_voicechanger_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableTop="@drawable/audio_effect_voice_change_uncle"
                android:focusable="false"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/ugckit_layout_sound_effect_uncle"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/btn_voicechanger_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableTop="@drawable/audio_effect_voice_change_heavy_mechanical"
                android:focusable="false"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/ugckit_layout_sound_effect_heavy_metal"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12dp" />


            <TextView
                android:id="@+id/btn_voicechanger_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableTop="@drawable/audio_effect_voice_change_foreigner"
                android:focusable="false"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/ugckit_layout_sound_effect_foreigner"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12dp" />


            <TextView
                android:id="@+id/btn_voicechanger_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableTop="@drawable/audio_effect_voice_change_beast"
                android:focusable="false"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/ugckit_layout_sound_effect_beast"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/btn_voicechanger_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableTop="@drawable/audio_effect_voice_change_fatty"
                android:focusable="false"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/ugckit_layout_sound_effect_fat_boy"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/btn_voicechanger_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableTop="@drawable/audio_effect_voice_change_electric"
                android:focusable="false"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/ugckit_layout_sound_effect_heavy_current"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/btn_voicechanger_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableTop="@drawable/audio_effect_voice_change_heavy_mechanical"
                android:focusable="false"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/ugckit_layout_sound_effect_heavy_machine"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/btn_voicechanger_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableTop="@drawable/audio_effect_voice_change_etheral"
                android:focusable="false"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/ugckit_layout_sound_effect_vacant"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12dp" />
        </LinearLayout>

    </HorizontalScrollView>

<!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:visibility="gone">-->

<!--        <Button-->
<!--            android:id="@+id/btn_volume"-->
<!--            android:layout_width="60dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="5dp"-->
<!--            android:background="@drawable/ugckit_ic_ugc_soundeffect"-->
<!--            android:text="@string/ugckit_sound_effect_pannel_volume"-->
<!--            android:textColor="@color/ugckit_white" />-->

<!--        <Button-->
<!--            android:id="@+id/btn_voicechange"-->
<!--            android:layout_width="60dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="5dp"-->
<!--            android:background="@null"-->
<!--            android:text="@string/ugckit_sound_effect_pannel_change_voice"-->
<!--            android:textColor="@color/ugckit_white" />-->

<!--        <Button-->
<!--            android:id="@+id/btn_reverb"-->
<!--            android:layout_width="60dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="5dp"-->
<!--            android:background="@null"-->
<!--            android:text="@string/ugckit_sound_effect_pannel_record_reverb"-->
<!--            android:textColor="@color/ugckit_white" />-->
<!--    </LinearLayout>-->


</LinearLayout>

