<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/layout_aspect_show"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_speed"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="?attr/recordAspect169Icon" />

        <ImageView
            android:id="@+id/iv_speed_mask"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ugckit_record_round_bg"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_speed"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins"
            android:gravity="center_horizontal"
            android:shadowColor="@color/ugckit_color_gray4"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="3"
            android:text="Kecepatan"
            android:textColor="@color/ugckit_white"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_speed_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/layout_aspect_show"
        android:background="@drawable/ugckit_drawable_gray_rect_bg"
        android:paddingVertical="4dp"
        android:paddingHorizontal="12dp"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/iv_speed_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:background="@drawable/normal_background_speed"
            android:gravity="center_horizontal"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:text="@string/speed_0_3x"
            />

        <TextView
            android:id="@+id/iv_speed_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:background="@drawable/normal_background_speed"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:layout_toEndOf="@id/iv_speed_first"
            android:text="@string/speed_0_5x" />

        <TextView
            android:id="@+id/iv_speed_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:background="@drawable/normal_background_speed"
            android:fontFamily="@font/poppins"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:layout_toEndOf="@id/iv_speed_second"
            android:text="@string/speed_1x" />

        <TextView
            android:id="@+id/iv_speed_fourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:background="@drawable/normal_background_speed"
            android:gravity="center_horizontal"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:layout_toEndOf="@id/iv_speed_third"
            android:text="@string/speed_2x" />

        <TextView
            android:id="@+id/iv_speed_fifth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:background="@drawable/normal_background_speed"
            android:gravity="center_horizontal"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:layout_toEndOf="@id/iv_speed_fourth"
            android:text="@string/speed_3x" />
    </RelativeLayout>
</RelativeLayout>